[tool.poetry]
name = "vcbot-sample"
version = "0.1.0"
description = ""
authors = ["syokoysn <syoko_ysn@outlook.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
